Change the tablet size to max-width: 44.999em to prevent the jumping  styling when get to 45em.

--- a/index.css
+++ b/index.css
@@ -422,7 +422,7 @@ support need to add for both property and value, because some browser may suppor
   }
 }
 
-@media (min-width: 35em) and (max-width: 45em) {
+@media (min-width: 35em) and (max-width: 44.999em) {
   .primary-navigation a > span {
     display: none;
   }
